cypress: Initial integration of cypress test framework.
Change-Id: Ibf300b33d32ce3e7f1affbaf0a59364ddb618b56

--- a/configure.ac
+++ b/configure.ac
@@ -960,6 +960,7 @@ AC_CONFIG_FILES([Makefile
                  android/lib/libSettings.gradle
                  android/lib/src/main/cpp/CMakeLists.txt
                  android/Makefile
+                 cypress_test/Makefile
                  gtk/Makefile
                  ios/config.h
                  ios/Mobile/Info.plist
