cypress: Make sure loolwsd is killed after make check.
Even if ony of the tests fails.

Change-Id: I18e7daff854fd51d4ba374d9d537ba76e171269c

--- a/cypress_test/Makefile.am
+++ b/cypress_test/Makefile.am
@@ -26,11 +26,17 @@ check-local: @JAILS_PATH@
 	@echo
 	@echo "Running cypress desktop tests..."
 	@echo
-	$(CYPRESS_BINARY) run --browser chrome --config integrationFolder=$(DESKTOP_TEST_FOLDER),video=false --headless
+	$(CYPRESS_BINARY) run --browser chrome \
+			--config integrationFolder=$(DESKTOP_TEST_FOLDER),video=false \
+			--headless || \
+			(pkill loolwsd && false)
 	@echo
 	@echo "Running cypress mobile tests..."
 	@echo
-	$(CYPRESS_BINARY) run --browser chrome --config integrationFolder=$(MOBILE_TEST_FOLDER),video=false,userAgent=$(MOBILE_USER_AGENT) --headless
+	$(CYPRESS_BINARY) run --browser chrome \
+			--config integrationFolder=$(MOBILE_TEST_FOLDER),video=false,userAgent=$(MOBILE_USER_AGENT) \
+			--headless || \
+			(pkill loolwsd && false)
 	@pkill loolwsd || true
 endif
 
