cypress: Always create a copy of the test document.
Before test execution. So the modifications won't
change the test documents.

Change-Id: I1b04fe96e8182033d44aeeaa3a7632dd81031a05

--- a/cypress_test/.gitignore
+++ b/cypress_test/.gitignore
@@ -1,3 +1,8 @@
 node_modules
-cypress/
+cypress/fixtures
+cypress/integration
+cypress/screenshots
+cypress/support
+cypress/videos
 package-lock.json
+workdir
