--- a/cypress_test/Makefile.am
+++ b/cypress_test/Makefile.am
@@ -26,7 +26,7 @@ check-local: @JAILS_PATH@
 	$(CYPRESS_BINARY) run --browser chrome \
 			--config integrationFolder=$(DESKTOP_TEST_FOLDER),video=false \
 			--headless \
-			--env TEST_DATA_FOLDER=$(abs_top_srcdir)/cypress_test/data/desktop/ || \
+			--env DATA_FOLDER=$(abs_top_srcdir)/cypress_test/data/desktop/,WORKDIR=$(abs_top_srcdir)/cypress_test/workdir/desktop/ || \
 			(pkill loolwsd && false)
 	@echo
 	@echo "Running cypress mobile tests..."
@@ -34,11 +34,16 @@ check-local: @JAILS_PATH@
 	$(CYPRESS_BINARY) run --browser chrome \
 			--config integrationFolder=$(MOBILE_TEST_FOLDER),video=false,userAgent=$(MOBILE_USER_AGENT) \
 			--headless \
-			--env TEST_DATA_FOLDER=$(abs_top_srcdir)/cypress_test/data/mobile/ || \
+			--env DATA_FOLDER=$(abs_top_srcdir)/cypress_test/data/mobile/,WORKDIR=$(abs_top_srcdir)/cypress_test/workdir/mobile/ || \
 			(pkill loolwsd && false)
 	@pkill loolwsd || true
 endif
 
 clean-local:
 	rm -rf node_modules
-	rm -rf cypress
+	rm -rf workdir
+	rm -rf cypress/fixtures
+	rm -rf cypress/integration
+	rm -rf cypress/screenshots
+	rm -rf cypress/support
+	rm -rf cypress/videos
