cypress: Move plugins folder out of cypress subfolder
Change-Id: Ia3a9a58b7f7e5e64c1e2f4211b75a33bbbb00c0e

--- a/cypress_test/.gitignore
+++ b/cypress_test/.gitignore
@@ -1,8 +1,4 @@
 node_modules
-cypress/fixtures
-cypress/integration
-cypress/screenshots
-cypress/support
-cypress/videos
+cypress
 package-lock.json
 workdir
