cypress: Move general cypress options to cypress.json
Change-Id: Iad6263f31ec9ef813424e4aab673c2ade1f7f3e5

--- a/cypress_test/Makefile.am
+++ b/cypress_test/Makefile.am
@@ -24,7 +24,7 @@ check-local: @JAILS_PATH@
 	@echo "Running cypress desktop tests..."
 	@echo
 	$(CYPRESS_BINARY) run --browser chrome \
-			--config integrationFolder=$(DESKTOP_TEST_FOLDER),video=false,pluginsFile=plugins/index.js \
+			--config integrationFolder=$(DESKTOP_TEST_FOLDER) \
 			--headless \
 			--env DATA_FOLDER=$(abs_top_srcdir)/cypress_test/data/desktop/,WORKDIR=$(abs_top_srcdir)/cypress_test/workdir/desktop/ || \
 			(pkill loolwsd && false)
@@ -32,7 +32,7 @@ check-local: @JAILS_PATH@
 	@echo "Running cypress mobile tests..."
 	@echo
 	$(CYPRESS_BINARY) run --browser chrome \
-			--config integrationFolder=$(MOBILE_TEST_FOLDER),video=false,userAgent=$(MOBILE_USER_AGENT),pluginsFile=plugins/index.js \
+			--config integrationFolder=$(MOBILE_TEST_FOLDER),userAgent=$(MOBILE_USER_AGENT) \
 			--headless \
 			--env DATA_FOLDER=$(abs_top_srcdir)/cypress_test/data/mobile/,WORKDIR=$(abs_top_srcdir)/cypress_test/workdir/mobile/ || \
 			(pkill loolwsd && false)
@@ -43,3 +43,4 @@ clean-local:
 	rm -rf node_modules
 	rm -rf workdir
 	rm -rf cypress
+	rm -rf package-lock.json
